<resources>
    <string name="app_name">Online Voting System</string>
    <string name="admin">ADMIN</string>
    <string name="voter">VOTER</string>
    <string name="result">RESULT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button">Button</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="signup">signup</string>
    <string name="signin">signin</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here…</string>
    <string name="not_registered_sign_up_here">Not registered? Sign Up here</string>
    <string name="view_assembly_results">view assembly results</string>
    <string name="view_parliment_results">view parliament results</string>
    <string name="create_voter">create voter</string>
    <string name="create_candidate">create candidate</string>
    <string name="create_assembly_candidate">create assembly candidate</string>
    <string name="create_parliment_candidate">create parliament candidate</string>
    <string name="online_voting_system">Online Voting System</string>
    <string name="logout">Logout</string>
    <string name="candidate_form">Candidate Form</string>
    <string name="voter_form">Voter Form</string>
    <string name="get_otp">Get OTP</string>
    <string name="voter_id">Voter ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="candidate_name">Candidate Name</string>
    <string name="todo">TODO</string>
    <string name="vote">Vote</string>
    <string name="_25">25</string>
    <string name="candidate_wins">Candidate1 Wins</string>
    <string name="voting_results">Voting Results</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="validate_otp">Validate Otp</string>
    <string name="regenerate_otp">Regenerate Otp</string>
    <string name="main_title">Malappuram District Legislative Assembly Election &amp; Lok Sabha Election</string>
    <string name="legislative_assembly_constituencies">Legislative Assembly Constituencies :</string>
    <string name="parliament_constituencies">Parliament Constituencies :</string>
</resources>
