<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminHomeActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_logout"
        android:layout_width="152dp"
        android:layout_height="68dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:padding="16dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#000000"
        app:cornerRadius="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_create_assembly_candidate"
            android:layout_width="306dp"
            android:layout_height="98dp"
            android:layout_marginTop="40dp"
            android:padding="16dp"
            android:text="@string/create_assembly_candidate"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#000000"
            app:cornerRadius="32dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_create_parliment_candidate"
            android:layout_width="306dp"
            android:layout_height="98dp"
            android:padding="16dp"
            android:text="@string/create_parliment_candidate"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#000000"
            app:cornerRadius="32dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_create_voter"
            android:layout_width="306dp"
            android:layout_height="72dp"
            android:padding="16dp"
            android:text="@string/create_voter"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#000000"
            app:cornerRadius="32dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_view_assembly_results"
            android:layout_width="306dp"
            android:layout_height="72dp"
            android:padding="16dp"
            android:text="@string/view_assembly_results"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#000000"
            app:cornerRadius="32dp" />
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_view_parliment_results"
            android:layout_width="306dp"
            android:layout_height="72dp"
            android:padding="16dp"
            android:text="@string/view_parliment_results"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#000000"
            app:cornerRadius="32dp" />

    </LinearLayout>

</RelativeLayout>
