<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_5dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/_5dp_corner_white_rectangle">

        <ImageView
            android:id="@+id/item_image_candidate_symbol"
            android:layout_width="@dimen/_48dp"
            android:layout_height="@dimen/_48dp"
            android:layout_margin="@dimen/_6dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/udf"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/item_text_candidate_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_text_candidate_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_6dp"
            android:text="@string/candidate_name"
            android:textColor="@color/black_dark"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/item_image_candidate_symbol"
            app:layout_constraintRight_toLeftOf="@id/item_text_no_of_votes"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_text_no_of_votes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_6dp"
            android:text="@string/_25"
            android:textColor="@color/black_dark"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/item_text_candidate_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
